--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,10 @@ plotly==5.19.0
 Requests==2.31.0
 streamlit==1.34.0
 google-cloud-bigquery==3.22.0
-db-dtypes
+db-dtypes==1.2.0
+google-auth==2.29.0
+google-auth-oauthlib==1.2.0
+google-cloud-core==2.4.1
+google-crc32c==1.1.2
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
