--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ google-cloud-core==2.4.1
 google-crc32c==1.1.2
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
+google-api-core==2.19.0
